[gd_scene load_steps=5 format=3 uid="uid://bg8alnqs6bcy2"]

[ext_resource type="PackedScene" uid="uid://e41uscdwo833" path="res://Painel - global/painel.tscn" id="1_ghyiq"]
[ext_resource type="Script" path="res://store/scripts/store_painel.gd" id="2_hbss2"]
[ext_resource type="Texture2D" uid="uid://pnqwurhc8457" path="res://assets/buttons/icon-store.png" id="2_o5jm6"]
[ext_resource type="PackedScene" uid="uid://bo5hcldoio8m3" path="res://store/scenes/OrangeRect.tscn" id="4_0decc"]

[node name="Store-painel" instance=ExtResource("1_ghyiq")]
script = ExtResource("2_hbss2")

[node name="Title" parent="Panel" index="0"]
offset_left = -27.0
offset_top = 36.0
offset_right = 87.0
offset_bottom = -358.0
text = "Loja
"

[node name="Icon-store" type="Sprite2D" parent="Panel" index="2"]
position = Vector2(404, 59)
texture = ExtResource("2_o5jm6")

[node name="OrangeRect" parent="Panel" index="3" instance=ExtResource("4_0decc")]
position = Vector2(96, 120)

[node name="OrangeRect2" parent="Panel" index="4" instance=ExtResource("4_0decc")]
position = Vector2(504, 120)

[node name="OrangeRect3" parent="Panel" index="5" instance=ExtResource("4_0decc")]
position = Vector2(96, 280)

[node name="OrangeRect4" parent="Panel" index="6" instance=ExtResource("4_0decc")]
position = Vector2(504, 280)
